Fix error-prone BoxedPrimitiveConstructor
The problem was with new Integer(). Replaced by Integer.valueOf().